[package]
name = "clahe"
version = "0.1.0"
description = "Pure rust image implementation of clahe"
authors = ["Micah Chambers <micahc.vt@gmail.com>" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/micahcc/clahe-rs"
readme = "README.md"

[dependencies]
image = "0"
num-traits = "0"
